# sel4_task

./: Cargo.toml  README.json  README.md  crates.js  doc.md  help.html  index.html  search-index.js  settings.html  src-files.js
search.desc/sel4_task/: sel4_task-desc-0-.js
sel4_task/: all.html  constant.SchedulerAction_ChooseNewThread.html  constant.SchedulerAction_ResumeCurrentThread.html  constant.ksDomScheduleLength.html  enum.ThreadState.html  fn.activateThread.html  fn.addToBitmap.html  fn.create_idle_thread.html  fn.get_currenct_thread.html  fn.get_currenct_thread_unsafe.html  fn.get_current_domain.html  fn.get_idle_thread.html  fn.get_ks_scheduler_action.html  fn.idle_thread.html  fn.isHighestPrio.html  fn.possible_switch_to.html  fn.ready_queues_index.html  fn.removeFromBitmap.html  fn.rescheduleRequired.html  fn.schedule.html  fn.schedule_tcb.html  fn.set_current_scheduler_action.html  fn.set_current_thread.html  fn.set_ks_scheduler_action.html  fn.timerTick.html  index.html  sidebar-items.js  static.ksCurDomain.html  static.ksCurThread.html  static.ksDomSchedule.html  static.ksDomScheduleIdx.html  static.ksDomainTime.html  static.ksIdleThread.html  static.ksReadyQueues.html  static.ksReadyQueuesL1Bitmap.html  static.ksReadyQueuesL2Bitmap.html  static.ksSchedulerAction.html  static.ksWorkUnitsCompleted.html  struct.dschedule_t.html  struct.lookupSlot_raw_ret_t.html  (+3 more)
sel4_task/heap/: fn.init_heap.html  index.html  sidebar-items.js
src/: deps.rs  ffi.rs  lib.rs  reply.rs  sched_context.rs  scheduler.rs  structures.rs  tcb.rs  tcb_queue.rs  thread_state.rs
(+71 files in other folders)
