[package]
name = "sel4_task"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4_common = { git = "https://github.com/reL4team2/sel4_common.git", branch = "master" }
sel4_cspace = { git = "https://github.com/reL4team2/sel4_cspace.git", branch = "master" }
sel4_vspace = { git = "https://github.com/reL4team2/sel4_vspace.git", branch = "master" }
log = "0.4.21"
cfg-if = "1.0"

[features]
enable_smp = []
kernel_mcs = []
have_fpu = []